--- a/templates/index.html
+++ b/templates/index.html
@@ -94,7 +94,7 @@
     var source = new EventSource('/data');
     source.onmessage = function(event){
         var e = JSON.parse(event)
-        document.body.innerHTML = "speed: " + e.data.speed + ", rpm:  " + e.data.rpm + '<br>';
+        document.body.innerHTML = "speed: " + e.speed + ", rpm:  " + e.data.rpm + '<br>';
     }
     </script>
 </html>
