--- a/templates/index.html
+++ b/templates/index.html
@@ -1,13 +1,19 @@
 <!DOCTYPE html>
 <html lang="en">
-<!-- <head>
+<head>
     <meta charset="UTF-8">
-    <title>Creating Real-Time Charts with Flask</title>
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" rel="stylesheet">
-<!-- </head> -->
+    <title>RX7 DASHBOARD</title>
+    <!-- <link href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/css/bootstrap.min.css" rel="stylesheet">
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.css" rel="stylesheet"> -->
+    <!-- <script>
+        import {zingchart, ZC} from './zingchart/es6.js';
+        // Modules must be imported EXPLICITLY when using es6 version
+        import './zingchart/modules-es6/zingchart-pareto.min.js';
+    </script> -->
+    <script src="static/zingchart.min.js"></script> 
+</head>
 <body>
-<div class="container">
+<!-- <div class="container">
     <div class="row">
         <div class="col-12">
             <div class="card">
@@ -17,61 +23,18 @@
             </div>
         </div>
     </div>
-</div>
+</div> -->
 <!--suppress JSUnresolvedLibraryURL -->
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.4.0/jquery.min.js"></script> -->
 <!--suppress JSUnresolvedLibraryURL -->
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.3.1/js/bootstrap.min.js"></script> -->
 <!--suppress JSUnresolvedLibraryURL -->
 <!-- <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.min.js"></script> -->
+<ul id="out"></ul>
+<div id="Speedchart"></div>
+<div id="Rpmchart"></div>
 <script>
-    // $(document).ready(function () {
-    //     const config = {
-    //         type: 'line',
-    //         data: {
-    //             labels: [],
-    //             datasets: [{
-    //                 label: "Random Dataset",
-    //                 backgroundColor: 'rgb(255, 99, 132)',
-    //                 borderColor: 'rgb(255, 99, 132)',
-    //                 data: [],
-    //                 fill: false,
-    //             }],
-    //         },
-    //         options: {
-    //             responsive: true,
-    //             title: {
-    //                 display: true,
-    //                 text: 'Creating Real-Time Charts with Flask'
-    //             },
-    //             tooltips: {
-    //                 mode: 'index',
-    //                 intersect: false,
-    //             },
-    //             hover: {
-    //                 mode: 'nearest',
-    //                 intersect: true
-    //             },
-    //             scales: {
-    //                 xAxes: [{
-    //                     display: true,
-    //                     scaleLabel: {
-    //                         display: true,
-    //                         labelString: 'Time'
-    //                     }
-    //                 }],
-    //                 yAxes: [{
-    //                     display: true,
-    //                     scaleLabel: {
-    //                         display: true,
-    //                         labelString: 'Value'
-    //                     }
-    //                 }]
-    //             }
-    //         }
-    //     };
-
-    //     // const context = document.getElementById('canvas').getContext('2d');
+    var data = null
 
     //     // const lineChart = new Chart(context, config);
 
@@ -88,13 +51,256 @@
     //         lineChart.update();
     //     }
     // });
+    
+    var speedConfig = {
+        theme: "dark",
+        type: "gauge",
+        globals: {
+            fontSize: 25
+        },
+        plotarea: {
+            marginTop: 80
+        },
+        plot: {
+            size: '100%',
+            valueBox: {
+            placement: 'center',
+            text: '%v', //default
+            "font-color": "white",
+            fontSize: 35,
+            rules: []
+            }
+        },
+        tooltip: {
+            borderRadius: 5
+        },
+        
+        scaleR: {
+            aperture: 275,
+            values: "0:180:20",
+            // markers: [{ //used for red portion of rpm
+            //   type: "area",
+            //   range: [160,180],
+            //   'offset-start':0.82,
+            //   'offset-end':0.1,
+            //   'background-color': "red",
+            //   alpha:0.7,
+            // }],
+            center: {
+            alpha: .75,
+            backgroundColor: 'black',
+            borderColor: 'white',
+            borderWidth: 2,
+            size: 40,
+            type: 'circle',
+            x: '50%',
+            visible: true,
+            y: '50%'
+            },
+            tick: {
+            alpha: 1,
+            lineColor: 'white',
+            lineStyle: 'solid',
+            lineWidth: 3,
+            placement: 'inner',
+            size: 35,
+            visible: true,
+            rules: [{
+                rule: '%i == 80',
+                lineColor: "red"
+            }]
+            },
+            minorTicks: 3,
+            minorTick: {
+            alpha: 1,
+            lineColor: 'white',
+            lineStyle: 'solid',
+            lineWidth: 2,
+            placement: 'inner',
+            size: 20,
+            visible: true
+            },
+            minorGuide: {visible: false},
+            item: {
+            'font-size':30,
+            'padding': 15,
+            offsetR: -145,
+            rules: [{
+                rule: '%i >= 0',
+                offsetX: -10,
+                offsetY: -6
+            // },
+            // {
+            //     rule: '%i >= 20 && %i < 80',
+            //     offsetX: -14,
+            //     offsetY: -4
+            // },
+            // {
+            //     rule: '%i < 20',
+            //     offsetX: -15,
+            //     offsetY: 17
+            }]
+            },
+            labels: ['0','20', '40', '60', '80', '100', '120', '140', '160', '180'],
+            ring: {
+            size: 15,
+            // rules: [{
+            //   rule: '%v >= 160 && %v < 180',
+            //   backgroundColor: '#E53935',
+            //   }]
+            },
+
+        },
+        series: [{
+            values: [0], // starting value
+            backgroundColor: 'red',
+            indicator: [-3, -3, -1, -100,-.3],
+            animation: {
+            effect: 2, 
+            method: 1,
+            sequence: 4,
+            speed: 3000
+            },
+        }]
+    };
+
+    var rpmConfig = {
+        theme: "dark",
+        type: "gauge",
+        globals: {
+            fontSize: 25
+        },
+        plotarea: {
+            marginTop: 80
+        },
+        plot: {
+            size: '100%',
+            valueBox: {
+            placement: 'center',
+            text: '%v', //default
+            "font-color": "white",
+            fontSize: 35,
+            rules: []
+            }
+        },
+        tooltip: {
+            borderRadius: 5
+        },
+
+        scaleR: {
+            aperture: 275,
+            values: "0:9",
+            // markers: [{ //used for red portion of rpm
+            //   type: "area",
+            //   range: [160,180],
+            //   'offset-start':0.82,
+            //   'offset-end':0.1,
+            //   'background-color': "red",
+            //   alpha:0.7,
+            // }],
+            center: {
+            alpha: .75,
+            backgroundColor: 'black',
+            borderColor: 'white',
+            borderWidth: 2,
+            size: 40,
+            type: 'circle',
+            x: '50%',
+            visible: true,
+            y: '50%'
+            },
+            tick: {
+            alpha: 1,
+            lineColor: 'white',
+            lineStyle: 'solid',
+            lineWidth: 3,
+            placement: 'inner',
+            size: 35,
+            visible: true,
+            rules: [{
+                rule: '%i == 80',
+                lineColor: "red"
+            }]
+            },
+            minorTicks: 3,
+            minorTick: {
+            alpha: 1,
+            lineColor: 'white',
+            lineStyle: 'solid',
+            lineWidth: 2,
+            placement: 'inner',
+            size: 20,
+            visible: true
+            },
+            minorGuide: {visible: false},
+            item: {
+            'font-size':40,
+            'padding': 10,
+            offsetR: -130,
+            rules: [{
+                // rule: '%i >= 0',
+                // offsetX: -10,
+                // offsetY: -6
+            // },
+            // {
+            //     rule: '%i >= 20 && %i < 80',
+            //     offsetX: -14,
+            //     offsetY: -4
+            // },
+            // {
+            //     rule: '%i < 20',
+            //     offsetX: -15,
+            //     offsetY: 17
+            }]
+            },
+            labels: ['0', '1', '2', '3', '4', '5', '6', '7', '8', '9'],
+            ring: {
+            size: 15,
+            rules: [{
+                rule: '%v >= 8 && %v < 9',
+                backgroundColor: '#E53935',
+                }]
+            },
+
+        },
+        series: [{
+            values: [0], // starting value
+            backgroundColor: 'red',
+            indicator: [-3, -3, -1, -100,-.3],
+            animation: {
+            effect: 2, 
+            method: 1,
+            sequence: 4,
+            speed: 3000
+            },
+        }]
+        };
+
+        zingchart.render({
+            id: 'Speedchart',
+            data: speedConfig,
+            height: 600,
+            width: "100%"
+        });
+
+        zingchart.render({
+            id: 'RpmChart',
+            data: rpmConfig,
+            height: 600,
+            width: '100%'
+        });
+        
     var source = new EventSource('/data');
     source.onmessage = function (event) {
-        var data = JSON.parse(event.data);
+        data = JSON.parse(event.data);
         var out = document.getElementById('out');
         out.innerHTML = "speed: " + data.speed + ", rpm:  " + data.rpm + '<br>';
+        zingchart.exec('Speedchart', 'setseriesvalues', {
+            plotindex:0,
+            values: [parseInt(data.speed)]
+        });
     }
 </script>
-<ul id="out"></ul>
+
 </body>
 </html> 
